--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,7 @@
         android:layout_gravity="center_horizontal"/>
 
     <Button
+        android:id="@+id/btn_set_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
