--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,82 +10,57 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/set_latitude"
-            android:textSize="18sp"
-            android:layout_margin="8dp"/>
+            android:text="@string/latitude_longitude"
+            android:textSize="22sp"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/text_view_set_lat"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_3d_fix"
-        android:textSize="18sp"
-        android:layout_margin="8dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/set_longitude"
+            android:text="@string/set_lat_long"
             android:textSize="18sp"
-            android:layout_margin="8dp"/>
+            android:layout_margin="3dp"
+            android:layout_marginRight="0dp"/>
 
         <TextView
-            android:id="@+id/text_view_set_long"
+            android:id="@+id/text_view_set_lat_long"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_3d_fix"
             android:textSize="18sp"
-            android:layout_margin="8dp"/>
+            android:layout_margin="3dp"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/current_latitude"
+            android:text="@string/current_lat_long"
             android:textSize="18sp"
-            android:layout_margin="8dp"/>
+            android:layout_margin="3dp"
+            android:layout_marginRight="0dp"/>
 
         <TextView
-            android:id="@+id/text_view_current_lat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/no_3d_fix"
-            android:textSize="18sp"
-            android:layout_margin="8dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/current_longitude"
-            android:textSize="18sp"
-            android:layout_margin="8dp"/>
-
-        <TextView
-            android:id="@+id/text_view_current_long"
+            android:id="@+id/text_view_current_lat_long"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_3d_fix"
             android:textSize="18sp"
-            android:layout_margin="8dp"/>
+            android:layout_margin="3dp"/>
     </LinearLayout>
 
     <View
@@ -125,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/set_location"
-        android:layout_margin="8dp"/>
+        android:layout_margin="5dp"/>
 
     <View
         android:layout_width="fill_parent"
