--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/gradient_background"
     tools:context="ca.nait.jstewart39.dudewheresmycar.MainActivity">
 
     <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="3dp"
+        android:background="@drawable/custom_background">
+
+        <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/latitude_longitude"
             android:textSize="22sp"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -39,6 +50,7 @@
             android:text="@string/no_3d_fix"
             android:textSize="18sp"
             android:layout_margin="3dp"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -51,8 +63,7 @@
             android:layout_height="wrap_content"
             android:text="@string/current_lat_long"
             android:textSize="18sp"
-            android:layout_margin="3dp"
-            android:layout_marginRight="0dp"/>
+            android:layout_marginBottom="3dp"/>
 
         <TextView
             android:id="@+id/text_view_current_lat_long"
@@ -60,58 +71,74 @@
             android:layout_height="wrap_content"
             android:text="@string/no_3d_fix"
             android:textSize="18sp"
-            android:layout_margin="3dp"/>
+            android:layout_marginBottom="3dp"/>
+
     </LinearLayout>
 
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:background="#FF00FFFF"/>
+        android:background="#DFDFDF"/>
 
-    <LinearLayout
+        <Button
+            android:id="@+id/btn_set_location"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="@string/set_location"
+            android:background="@drawable/custom_button"/>
+
+    </LinearLayout>
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
-        <TextView
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:id="@+id/map"
+                  android:name="com.google.android.gms.maps.SupportMapFragment"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  tools:context="com.example.mapwithmarker.MapsMarkerActivity"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="15dp"
+            android:background="@drawable/shadow"/>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/distance_from_location"
-            android:textSize="22sp"
-            android:layout_margin="5dp"/>
-    </LinearLayout>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/custom_border">
 
-    <TextView
-        android:id="@+id/text_view_meters"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no_3d_fix"
-        android:textColor="@color/colorPrimaryDark"
-        android:background="#CACACA"
-        android:textSize="22sp"
-        android:layout_gravity="center_horizontal"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_view_distance"
+                android:text="@string/distance_from_location"
+                android:textSize="22sp"
+                android:layout_margin="5dp"/>
 
-    <Button
-        android:id="@+id/btn_set_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/set_location"
-        android:layout_margin="5dp"/>
+            <TextView
+                android:id="@+id/text_view_meters"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_3d_fix"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="22sp"
+                android:layout_margin="5dp"/>
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="#FF00FFFF"/>
+        </LinearLayout>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/map"
-              android:name="com.google.android.gms.maps.SupportMapFragment"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context="com.example.mapwithmarker.MapsMarkerActivity"/>
+    </RelativeLayout>
+
 </LinearLayout>
